# api/controllers/event.js
@@ -3,7 +3,8 @@
 var Event = require('../helpers/models.js').Event;
 
 module.exports = {
-    getEvents: getEvents
+    getEvents: getEvents,
+    getEventById: getEventById
 };
 
 
@@ -13,5 +14,15 @@ function getEvents(req, res) {
             res.status(500).json('Error while fetching records. ' + err);
         }
         res.json(events);
+    });
+}
+
+function getEventById(req, res){
+    Event.find({_id:req.swagger.params.id.value},function(err, event){
+        if(err){
+            res.status(500).json('Error while fetching event. ' + err);
+        }else{
+            res.json(event);
+        }
     });
 }
